--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,114 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
+
+:root {
+  /* COLORS */
+  --BGCOLOR: #0F172A;
+  --BORDER-COLOR: #FFF;
+  --COLOR: #FFF;
+  --ERROR: firebrick;
+  --INACTIVE: lightgray;
+  --LINK-COLOR: whitesmoke;
+  --LINK-HOVER: rgba(245, 245, 245, 0.9);
+  --NOTE-BGCOLOR: hsla(240, 64%, 27%, 0.65);
+  --STATUS-COMPLETE: limegreen;
+  --STATUS-OPEN: firebrick;
+  --TABLE-BGCOLOR: #FFF;
+  --TABLE-COLOR: #000;
+  --INPUT-INVALID: #F00;
+}
+
+body{
+  background: #aab0b9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.errmsg {
+  display: inline-block;
+  background-color: var(--TABLE-BGCOLOR);
+  color: var(--ERROR);
+  padding: 0.25em;
+  margin-bottom: 0.5em;
+}
+
+.errmsg a:any-link {
+  color: var(--ERROR);
+  text-decoration: underline;
+}
+
+.login__page{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.wrapper{
+  width: 330px;
+  padding: 4rem 0 4rem 0;
+  margin: 50px auto;
+  background: #fff;
+  border-radius: 10px;
+  border: solid 1px #c2b8d3;
+  text-align: center;
+  box-shadow: 0 25px 10px rgba(0, 0, 0, 0.1);
+}
+h1{
+  font-size: 1.5rem;
+  color: #07001f;
+  margin-bottom: 10px;
+}
+p{
+  margin-bottom: 1.5rem;
+  font-size: 14px;
+}
+form input{
+  width: 85%;
+  background: #dfe9f5;
+  padding: 6px 10px;
+  margin-bottom: 10px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #07001f;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+.check{
+  display: flex;
+  justify-content: space-evenly;
+  margin-right: 9rem;
+}
+.check input{
+  width: 15px;
+  height: 15px;
+}
+.check label{
+    text-align: right;
+    font-size: 14px;
+    font-weight: bold;
+    margin-right: 5px;
+}
+button{
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-top: 1rem;
+  padding: 8px 0;
+  border-radius: 9px;
+  outline: none;
+  border: none;
+  width: 85%;
+  background: rgba(56, 2, 163, 0.767);
+  color: #fff;
+  cursor: pointer;
+}
+button:hover{
+  background: rgb(51, 17, 164);
+}
+
