--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,115 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
+/** @format */
+
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
 
 html,
 body,
 #root,
 .app,
 .content {
-    height: 100%;
-    width: 100%;
-    font-family: 'Source Sans 3', sans-serif;
-    font-weight: 200;
-} 
+	height: 100%;
+	width: 100%;
+	font-family: "Source Sans 3", sans-serif;
+	font-weight: 200;
+}
 
 .app {
-    display: flex; 
-    position: relative;
+	display: flex;
+	position: relative;
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
+	width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #e0e0e0;
+	background: #e0e0e0;
 }
 
 /* Handle */
 ::webkit-scrollbar-thumb {
-    background: #888;
+	background: #888;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+	background: #555;
+}
+
+.form {
+	display: flex;
+	justify-content: center;
+	margin-right: 100px;
+	height: 3vh;
+	margin-top: 5px;
+}
+.btn{
+        margin-Left: -4px;
+        font-Size: 11px;
+        font-Weight: 600;
+        height: 20px;
+        align-Items: center;
+}
+.btn:hover{
+        color: #9cf4d1;
+}
+.header {
+	text-align: center;
+	font-size: 22px;
+	font-weight: "bold";
+}
+.close {
+	float: right;
+	cursor: pointer;
+	margin-top: 5px;
+	width: 20px;
+	height: 20px;
+}
+.form-container {
+	margin-top: 10px;
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+}
+.class_container {
+	display: flex;
+	flex-direction: row;
+	gap: 20px;
+}
+.input-container {
+	display: flex;
+	flex-direction: column;
+	gap: 3px;
+}
+.dropdown {
+	width: 10rem;
+}
+.input-container label {
+	font-weight: bold;
+}
+.input-container input,
+.input-container select {
+	width: 100%;
+	height: 35px;
+	border-radius: 5px;
+	background-color: #a7a8b2;
+	color: #080808;
+}
+.radio-container {
+	display: flex;
+	flex-direction: row;
+	gap: 20px;
+}
+.submit-button {
+	background-color: #61c591;
+	color: #fffdfd;
+	width: 20%;
+	height: 35px;
+	border-radius: 10px;
+	margin-top: 13px;
+	font-size: 18px;
+	font-weight: bold;
+	align-self: end;
+	cursor: pointer;
 }
