completed user manager

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Source Sans 3', sans-serif;
 }
 
 :root {
@@ -60,15 +58,16 @@ body{
   text-align: center;
   box-shadow: 0 25px 10px rgba(0, 0, 0, 0.1);
 }
-h1{
+.login_h1{
   font-size: 1.5rem;
   color: #07001f;
   margin-bottom: 10px;
 }
-p{
+.login_p{
   margin-bottom: 1.5rem;
   font-size: 14px;
 }
+
 form input{
   width: 85%;
   background: #dfe9f5;
@@ -95,7 +94,7 @@ form input{
     font-weight: bold;
     margin-right: 5px;
 }
-button{
+.login_button{
   font-size: 1.1rem;
   font-weight: bold;
   margin-top: 1rem;
@@ -108,7 +107,211 @@ button{
   color: #fff;
   cursor: pointer;
 }
-button:hover{
+.login_button:hover{
   background: rgb(51, 17, 164);
 }
 
+
+html,
+body,
+.app,
+.content {
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    font-weight: 200;
+} 
+
+
+
+
+.app {
+    display: flex; 
+    position: relative;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #e0e0e0;
+}
+
+/* Handle */
+::webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.form {
+	display: flex;
+	justify-content: center;
+	margin-right: 100px;
+	height: 3vh;
+	margin-top: 5px;
+}
+.btn{
+        margin-Left: -4px;
+        font-Size: 11px;
+        font-Weight: 600;
+        height: 20px;
+        align-Items: center;
+}
+.btn:hover{
+        color: #9cf4d1;
+}
+.header {
+	text-align: center;
+	font-size: 22px;
+	font-weight: "bold";
+}
+.close {
+	float: right;
+	cursor: pointer;
+	margin-top: 5px;
+	width: 20px;
+	height: 20px;
+}
+
+.class_container {
+	display: flex;
+	flex-direction: row;
+	gap: 20px;
+}
+.input-container {
+	display: flex;
+	flex-direction: column;
+	gap: 3px;
+}
+.dropdown {
+	width: 10rem;
+}
+.input-container label {
+	font-weight: bold;
+}
+.input-container input,
+.input-container select {
+	width: 100%;
+	border-radius: 5px;
+	background-color: #a7a8b2;
+	color: #080808;
+}
+.radio-container {
+	display: flex;
+	flex-direction: row;
+	gap: 20px;
+}
+.submit-button {
+	background-color: #61c591;
+	color: #fffdfd;
+	width: 20%;
+	height: 35px;
+	border-radius: 10px;
+	margin-top: 13px;
+	font-size: 18px;
+	font-weight: bold;
+	align-self: end;
+	cursor: pointer;
+}
+
+.nowrap {
+  white-space: nowrap;
+}
+
+.form {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 0.75em;
+  max-width: 800px;
+}
+
+.form__checkbox-container {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  gap: 0.5em;
+}
+
+.form__persist {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 0.5em;
+}
+
+.form__title-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.form__input,
+.form__submit-button {
+  padding: 0.5em;
+  border-radius: 15px;
+}
+
+.form__input--text {
+  min-height: 150px;
+}
+
+.form__input--incomplete {
+  border: 1px solid var(--INPUT-INVALID);
+  outline: 1px solid var(--INPUT-INVALID);
+}
+
+.form__checkbox {
+  width: 24px;
+  height: 24px;
+}
+
+.form__select {
+  width: 200px; /* Set the width of the select box */
+  height: auto; /* Allow the height to adjust based on content */
+  padding: 5px; /* Add some padding around the checkboxes */
+  border: 1px solid #ccc; /* Add a border */
+  overflow-y: auto; /* Enable vertical scrolling if options exceed the height */
+}
+
+/* Style the options to look like checkboxes */
+.form__select option {
+  padding: 5px; /* Add padding */
+  border-bottom: 1px solid #ccc; /* Add a border between options */
+}
+
+/* Hide the default dropdown arrow */
+.form__select::-ms-expand {
+  display: none;
+}
+
+.form__select option:checked {
+  background-color: #e0e0e0; /* Change background color of checked options */
+}
+
+
+.form__action-buttons {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 0.5em;
+  position: absolute;
+  right: 0.5em;
+}
+
+.form__row {
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 2em;
+}
+
+.form__divider {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 0.5em;
+}
