--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@ body,
 .class_container {
 	display: flex;
 	flex-direction: row;
-	gap: 20px;
+	gap: 30px;
 }
 .input-container {
 	display: flex;
@@ -78,16 +78,33 @@ body,
 .dropdown {
 	width: 10rem;
 }
+.Fdropdown {
+	width: 7.5rem;
+}
 .input-container label {
 	font-weight: bold;
 }
-.input-container input,
+.input-container input {
+	width: 100%;
+	height: 35px;
+	border-radius: 5px;
+	background-color: #cbccd9;
+	color: #080808;
+	padding-left: 5px;
+	padding-right: 10px;
+	font-size: 14px;
+	font-weight: 600;
+}
 .input-container select {
 	width: 100%;
 	height: 35px;
 	border-radius: 5px;
-	background-color: #a7a8b2;
+	background-color: #cbccd9;
 	color: #080808;
+	padding-left: 5px;
+	padding-right: 10px;
+	font-size: 14px;
+	font-weight: 600;
 }
 .radio-container {
 	display: flex;
@@ -97,7 +114,7 @@ body,
 .submit-button {
 	background-color: #61c591;
 	color: #fffdfd;
-	width: 20%;
+	width: 25%;
 	height: 35px;
 	border-radius: 10px;
 	margin-top: 13px;
@@ -152,3 +169,54 @@ body,
 	height: 30px; 
 	width: 30px
   }
+
+.dropdown-menu {
+	/* position: absolute; */
+	/* top: 100%; */
+	left: 0;
+	right: 0;
+	background: white;
+	/* border: 1px solid #ccc; */
+	max-height: 150px;
+	overflow-y: auto;
+	z-index: 1000;
+	color: #080808;
+  }
+
+  .NameInput{
+	color: #080808;
+  }
+
+  .dropdownContent{
+	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
+	border-radius: 3px;
+	background-color: #e9f0f8;
+	color: #080808;
+	max-height: 200px;
+	overflow: auto;
+	overflow-block: auto;
+	position: absolute;
+	z-index: 99;
+	width: 92%;
+	margin-top: 58px;
+  } 
+
+  .dropdownContent ul{
+	list-style: none;
+  }
+
+  .dropdownContent ul li{
+	padding: 3px;
+	cursor: pointer;
+	width: 95%;
+  }
+
+  .dropdownContent ul li:hover{
+	background-color: #d8d9e3;
+  }
+
+  .dropdownContent ul li:active{
+	background-color: #9d9ea5;
+  }
+
+
