--- a/src/index.css
+++ b/src/index.css
@@ -397,6 +397,9 @@ body,
   background-color: white;
   width: 150px;
   border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .fee-complete {
